--- a/src/main/resources/my/weatherApp/Weather.html
+++ b/src/main/resources/my/weatherApp/Weather.html
@@ -7,18 +7,18 @@
  </head>
  <body>
   <vaadin-form-layout primary-style-name="mytheme" size-auto>
-   <vaadin-grid-layout style-name="v-component-group" spacing size-full margin _id="gridLayout">
+   <vaadin-grid-layout spacing size-full margin _id="gridLayout">
     <row>
      <column></column>
      <column>
-      <vaadin-label style-name="huge" plain-text _id="headerLabel" :center>
-        Тестовое сетевое приложение 
+      <vaadin-label primary-style-name="v-label-header" style-name="huge" plain-text _id="headerLabel" :center>
+        Тестовое приложение 
       </vaadin-label>
      </column>
     </row>
     <row>
      <column>
-      <vaadin-panel width="250px" height="290px" _id="weatherBoard" :middle :center>
+      <vaadin-panel primary-style-name="v-panel-translucent" width="280px" height="290px" _id="weatherBoard" :middle :center>
        <vaadin-vertical-layout size-full>
         <vaadin-label style-name="h3" plain-text _id="weatherHeader" :bottom :center>
           Погода 
@@ -37,12 +37,12 @@
       </vaadin-panel>
      </column>
      <column>
-      <vaadin-panel width="250px" height="290px" _id="currencyBoard" :middle :center>
+      <vaadin-panel primary-style-name="v-panel-translucent" width="280px" height="290px" _id="currencyBoard" :middle :center>
        <vaadin-vertical-layout height="90%">
         <vaadin-label style-name="h3" height="26px" plain-text _id="currencyHeader" :middle :center :expand>
           Курс валют 
         </vaadin-label>
-        <vaadin-grid caption-as-html column-resize-mode="simple" style-name="no-header" header-visible="false" width-full height="77px" data-item-type="my.weatherApp.model.CurrencyRate" selection-mode="none" _id="currencyTable" :center :expand>
+        <vaadin-grid caption-as-html column-resize-mode="simple" header-visible="false" width-full height="77px" data-item-type="my.weatherApp.model.CurrencyRate" selection-mode="none" _id="currencyTable" :center :expand>
          <table>
           <colgroup>
            <col column-id="name" sortable>
@@ -62,7 +62,7 @@
       </vaadin-panel>
      </column>
      <column>
-      <vaadin-panel width="250px" height="290px" _id="visitBoard" :middle :center>
+      <vaadin-panel primary-style-name="v-panel-translucent" width="280px" height="290px" _id="visitBoard" :middle :center>
        <vaadin-vertical-layout style-name="huge" size-full>
         <vaadin-label style-name="h3" height="46px" plain-text _id="visitHeader" :middle :center>
           Счетчик посещений 
@@ -77,7 +77,7 @@
     </row>
     <row>
      <column>
-      <vaadin-label plain-text _id="dateInfo" :bottom :center>
+      <vaadin-label width-full plain-text _id="dateInfo" :bottom :center>
         Информация по состоянию на 
       </vaadin-label>
      </column>
