--- a/src/main/resources/my/weatherApp/Weather.html
+++ b/src/main/resources/my/weatherApp/Weather.html
@@ -42,7 +42,7 @@
         <vaadin-label style-name="h3" height="26px" plain-text _id="currencyHeader" :middle :center :expand>
           Курс валют 
         </vaadin-label>
-        <vaadin-grid caption-as-html column-resize-mode="simple" primary-style-name="v-grid-16" header-visible="false" width-full height="120px" data-item-type="my.weatherApp.model.CurrencyRate" selection-mode="none" _id="currencyTable" :center :expand>
+        <vaadin-grid caption-as-html column-resize-mode="simple" primary-style-name="v-grid-16" header-visible="false" width-full height="125px" data-item-type="my.weatherApp.model.CurrencyRate" selection-mode="none" _id="currencyTable" :center :expand>
          <table>
           <colgroup>
            <col column-id="name" sortable="false">
@@ -62,7 +62,7 @@
          </table>
         </vaadin-grid>
         <vaadin-label plain-text></vaadin-label>
-        <vaadin-native-button plain-text _id="updateCurency" :center>
+        <vaadin-native-button plain-text _id="updateCurrency" :center>
           Обновить 
         </vaadin-native-button>
         <vaadin-label plain-text></vaadin-label>
